--- a/module/media/_media.scss
+++ b/module/media/_media.scss
@@ -31,9 +31,9 @@
 // @return {String} @media (max-width: 1000px), (max-width: 1120px)
 //
 @mixin query($conditions...) {
-    $expression: processor.processing((), 1, 1, $conditions...);
-    $expression: processor.post-processing($expression);
-    @media #{processor.building($expression)} {
+    $expressions: processor.processing((), 1, 1, $conditions...);
+    $expressions: processor.post-processing($expressions);
+    @media #{processor.construction($expressions)} {
         @content;
     }
 }
