--- a/module/media/parser/_index.scss
+++ b/module/media/parser/_index.scss
@@ -12,7 +12,7 @@
 @use "../../../vendor/core/to";
 @use "../../../vendor/core/const";
 
-@function expressions($_condition_, $expCounter, $condCounter) {
+@function parse($_condition_) {
     @if (is.empty($_condition_)) {
         @return "";
     }
