media: rewrite device map to list

--- a/module/media/parser/_index.scss
+++ b/module/media/parser/_index.scss
@@ -24,9 +24,13 @@
     $expressions: ();
 
     $device: device.parse($_condition_);
-    @if ($device != null) {
+    @if not (is.empty($device)) {
         @return map.deep-merge($expressions, (
-            'device': ($device: $device)
+            'device': list.append(
+                if(map.has-key($expressions, 'device'),
+                    map.get($expressions, 'device'), ()
+                ), $device, 'comma'
+            )
         ));
     }
 
